change_log.txt
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-nov-21 fwb
	fixed property property integer
	multi segment WIRE - OrCad ver 10
	text size per FigGrp
	pick up Instance Ref Designator
   TODO
	remove XTIEs form netlist
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-nov-16 fwb
	removed strndup from edif.y
	added OutPro function to generate a .pro file with libs listed
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-oct-30 fwb 
	fixed CAPSYM.lib - power syms
	better netlist - caps have VCC & GND
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-oct-23 fwb - clean up, fix core crash, pin visability
	TODO:
		o fix Power connections
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-oct-17 fwb - Schematic is useable, not perfect
	eyespy works, PS10 doesn't
	need to hand edit 
	o library for PinUP, PinDown
	o OrCad mistakes (couple Cap positions)
	TODO:
	 	o debug/fix PS10
		o add TIE points
		o try to generate a netlist from EEschema
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-Oct-12 fwb - multiple libs, fixed ARC, DESIGNATOR/VALUE 
	position Demorgan convert & pin name renames
	Looks good enough to start schematic
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-Oct-10 fwb - major rewrite, cleanup
       	produces separate libs, KiCad style
       	symbol pins are close
       	but not quite ready for primetime
       	ARC needs some work
       	Note:OrCad puts out multiple Instance designators
	    Program warnings only
=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
2007-oct-06 fwb - fewer errors on lib browse
  	symbls are recognizable
	need to work on text orientation	
	e2net broken